--- a/docs/celeba.ipynb
+++ b/docs/celeba.ipynb
@@ -5,7 +5,237 @@
    "id": "61438119",
    "metadata": {},
    "source": [
-    "# Celeba"
+    "# Celeba\n",
+    "\n",
+    "Our task is to determine whether the celebrity in the image is smiling. This can be easily changed to any of the binary attributes provided by the original CelebA project by modifying the `TARGET_NAME` constant in `preprocess/metadata_to_json`. We have ignored all celebrities with less than 5 images in our pipeline.\n",
+    "\n",
+    "```shell\n",
+    "TARGET_NAME=[\n",
+    "  5_o_Clock_Shadow, Arched_Eyebrows, Attractive, Bags_Under_Eyes, Bald, Bangs,\n",
+    "  Big_Lips, Big_Nose, Black_Hair, Blond_Hair, Blurry, Brown_Hair, Bushy_Eyebrows,\n",
+    "  Chubby, Double_Chin, Eyeglasses, Goatee, Gray_Hair, Heavy_Makeup, High_Cheekbones,\n",
+    "  Male, Mouth_Slightly_Open, Mustache, Narrow_Eyes, No_Beard, Oval_Face, Pale_Skin,\n",
+    "  Pointy_Nose, Receding_Hairline, Rosy_Cheeks, Sideburns, Smiling, Straight_Hair,\n",
+    "  Wavy_Hair, Wearing_Earrings, Wearing_Hat, Wearing_Lipstick, Wearing_Necklace,\n",
+    "  Wearing_Necktie, Young]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b99d0d8",
+   "metadata": {},
+   "source": [
+    "## Data Download"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e1d54e",
+   "metadata": {},
+   "source": [
+    "### Setup Instructions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27306aec",
+   "metadata": {},
+   "source": [
+    "#### Install dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2c99c830",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\r\n",
+      "Requirement already satisfied: numpy in /Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages (1.20.2)\r\n",
+      "Requirement already satisfied: pillow in /Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages (8.3.1)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install numpy pillow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9184ca73",
+   "metadata": {},
+   "source": [
+    "#### Manually Download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "14ea8484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd ../benchmark/datasets/celeba && mkdir -pv data/raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4a363b4",
+   "metadata": {},
+   "source": [
+    "- From <http://mmlab.ie.cuhk.edu.hk/projects/CelebA.html>, download or request the metadata files ```identity_CelebA.txt``` and ```list_attr_celeba.txt```, place them inside the ```data/raw``` folder.\n",
+    "- Download the celebrity faces dataset from the same site. Place the images in a folder named ```img_align_celeba``` in the same folder as above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b211707a",
+   "metadata": {},
+   "source": [
+    "#### Generate federated dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee83aa0a",
+   "metadata": {},
+   "source": [
+    "Run `bash preprocess.sh` with a choice of the following tags:\n",
+    "- `-s` := 'iid' to sample in an i.i.d. manner, or 'niid' to sample in a non-i.i.d. manner; more information on i.i.d. versus non-i.i.d. is included in the 'Notes' section\n",
+    "- `--iu` := number of users, if iid sampling; expressed as a fraction of the total number of users; default is 0.01\n",
+    "- `--sf` := fraction of data to sample, written as a decimal; default is 0.1\n",
+    "- `-k` := minimum number of samples per user\n",
+    "- `-t` := 'user' to partition users into train-test groups, or 'sample' to partition each user's samples into train-test groups\n",
+    "- `--tf` := fraction of data in training set, written as a decimal; default is 0.9\n",
+    "- `--smplseed` := seed to be used before random sampling of data\n",
+    "- `--spltseed` := seed to be used before random split of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7121956",
+   "metadata": {},
+   "source": [
+    "**Small-sized Dataset** (Optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "de89d90d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./preprocess.sh: line 153: realpath: command not found\n",
+      "------------------------------\n",
+      "sampling data\n",
+      "Using seed 1632618330\n",
+      "\n",
+      "- random seed written out to sampling_seed.txt\n",
+      "writing all_data_niid_05.json\n",
+      "------------------------------\n",
+      "removing users with less than 0 samples\n",
+      "writing all_data_niid_05_keep_0.json\n",
+      "------------------------------\n",
+      "generating training and test sets\n",
+      "- random seed written out to split_seed.txt\n",
+      "splitting data by sample\n",
+      "writing all_data_niid_05_keep_0_train_9.json\n",
+      "writing all_data_niid_05_keep_0_test_9.json\n",
+      "------------------------------\n",
+      "calculating JSON file checksums\n",
+      "checksums written to meta/dir-checksum.md5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clear tmp folder\n",
+    "!cd ../benchmark/datasets/celeba/ && rm -rf data/rem_user_data data/sampled_data data/test data/train\n",
+    "\n",
+    "# Download data and sampling\n",
+    "!cd ../benchmark/datasets/celeba/ && bash preprocess.sh -s niid --sf 0.05 -k 0 -t sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d642c39",
+   "metadata": {},
+   "source": [
+    "**Full-sized Dataset** (Optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "018d087e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear tmp folder\n",
+    "!cd ../benchmark/datasets/celeba/ && rm -rf data/rem_user_data data/sampled_data data/test data/train\n",
+    "\n",
+    "# Download data and sampling\n",
+    "!cd ../benchmark/datasets/celeba/ && bash preprocess.sh -s niid --sf 1.0 -k 0 -t sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917d51b0",
+   "metadata": {},
+   "source": [
+    "### Notes\n",
+    "\n",
+    "- More details on i.i.d. versus non-i.i.d.:\n",
+    "  - In the i.i.d. sampling scenario, each data-point is equally likely to be sampled. Thus, all users have the same underlying distribution of data.\n",
+    "  - In the non-i.i.d. sampling scenario, the underlying distribution of data for each user is consistent with the raw data. Since we assume that data distributions vary between user in the raw data, we refer to this sampling process as non-i.i.d.\n",
+    "- More details on `preprocess.sh`:\n",
+    "  - The order in which `preprocess.sh` processes data is 1. generating all_data, 2. sampling, 3. removing users, and 4. creating train-test split. The script will look at the data in the last generated directory and continue preprocessing from that point. For example, if the `all_data` directory has already been generated and the user decides to skip sampling and only remove users with the `-k` tag (i.e. running `preprocess.sh -k 50`), the script will effectively apply a remove user filter to data in `all_data` and place the resulting data in the `rem_user_data` directory.\n",
+    "  - File names provide information about the preprocessing steps taken to generate them. For example, the `all_data_niid_1_keep_64.json` file was generated by first sampling 10 percent (.1) of the data `all_data.json` in a non-i.i.d. manner and then applying the `-k 64` argument to the resulting data.\n",
+    "- Each .json file is an object with 3 keys:\n",
+    "  1. 'users', a list of users\n",
+    "  2. 'num_samples', a list of the number of samples for each user, and\n",
+    "  3. 'user_data', an object with user names as keys and their respective data as values.\n",
+    "- Run `./stats.sh` to get statistics of data (`data/all_data/all_data.json` must have been generated already)\n",
+    "- In order to run reference implementations in `../models` directory, the `-t sample` tag must be used when running `./preprocess.sh`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c21ae16",
+   "metadata": {},
+   "source": [
+    "### Valid dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "58a5dcf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SimulationDataset(total_parts: 468, total_samples: 8870, current_parts: 0)\n",
+      "torch.Size([3, 84, 84]) torch.Size([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from benchmark.datasets.celeba import get_celeba\n",
+    "dataset = get_celeba('../benchmark/datasets/celeba/data')\n",
+    "print(dataset)\n",
+    "x, y = dataset[0]\n",
+    "print(x.shape, y.shape)"
    ]
   },
   {
