--- a/docs/stackoverflow.ipynb
+++ b/docs/stackoverflow.ipynb
@@ -10,6 +10,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a1162d3",
+   "metadata": {},
+   "source": [
+    "## Data Download"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c914c49b",
+   "metadata": {},
+   "source": [
+    "### Download the proprocessed dataset from [FedML](https://github.com/FedML-AI/FedML)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "633ec3dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd ../benchmark/datasets/stackoverflow && mkdir -pv data/raw\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && wget --no-check-certificate --no-proxy  https://fedml.s3-us-west-1.amazonaws.com/stackoverflow.tag_count.tar.bz2\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && wget --no-check-certificate --no-proxy  https://fedml.s3-us-west-1.amazonaws.com/stackoverflow.word_count.tar.bz2\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && wget --no-check-certificate --no-proxy  https://fedml.s3-us-west-1.amazonaws.com/stackoverflow.tar.bz2\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && wget --no-check-certificate --no-proxy  https://fedml.s3-us-west-1.amazonaws.com/stackoverflow_nwp.pkl\n",
+    "    \n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && tar -xvf stackoverflow.tag_count.tar.bz2 && rm -rf stackoverflow.tag_count.tar.bz2\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && tar -xvf stackoverflow.word_count.tar.bz2 && rm -rf stackoverflow.word_count.tar.bz2\n",
+    "!cd ../benchmark/datasets/stackoverflow/data/raw && tar -xvf stackoverflow.tar.bz2 && rm -rf stackoverflow.tar.bz2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74bc5133",
+   "metadata": {},
+   "source": [
+    "### Valid Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dbacaf9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StackOverFlowTP(total_parts: 342477, total_samples: <bound method StackOverFlowTP.total_samples of <benchmark.datasets.stackoverflow.stackoverflow.StackOverFlowTP object at 0x7fb9482ed810>>, current_parts: 0)\n",
+      "torch.Size([10003]) torch.Size([500])\n",
+      "StackOverFlowNWP(total_parts: 342477, total_samples: <bound method StackOverFlowNWP.total_samples of <benchmark.datasets.stackoverflow.stackoverflow.StackOverFlowNWP object at 0x7fb968f52ed0>>, current_parts: 0)\n",
+      "torch.Size([20]) torch.Size([20])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages/benchmark-0.0.0-py3.7.egg/benchmark/datasets/utils/transforms.py:34: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  return torch.tensor(x).float()\n"
+     ]
+    }
+   ],
+   "source": [
+    "from benchmark.datasets.stackoverflow import get_stackoverflow\n",
+    "dataset = get_stackoverflow('../benchmark/datasets/stackoverflow/data', mode='tp')\n",
+    "print(dataset)\n",
+    "x, y = dataset[0]\n",
+    "print(x.shape, y.shape)\n",
+    "\n",
+    "dataset = get_stackoverflow('../benchmark/datasets/stackoverflow/data', mode='nwp')\n",
+    "print(dataset)\n",
+    "x, y = dataset[0]\n",
+    "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f94229c",
    "metadata": {},
    "source": [
