--- a/docs/mnist.ipynb
+++ b/docs/mnist.ipynb
@@ -18,12 +18,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "2ca0ff4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to data/raw/raw/MNIST/raw/train-images-idx3-ubyte.gz\n",
+      "9913344it [00:53, 185842.33it/s]                                                \n",
+      "Extracting data/raw/raw/MNIST/raw/train-images-idx3-ubyte.gz to data/raw/raw/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to data/raw/raw/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+      "29696it [00:00, 8071154.20it/s]                                                 \n",
+      "Extracting data/raw/raw/MNIST/raw/train-labels-idx1-ubyte.gz to data/raw/raw/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to data/raw/raw/MNIST/raw/t10k-images-idx3-ubyte.gz\n",
+      "1649664it [00:09, 172234.61it/s]                                                \n",
+      "Extracting data/raw/raw/MNIST/raw/t10k-images-idx3-ubyte.gz to data/raw/raw/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to data/raw/raw/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+      "5120it [00:00, 17718511.95it/s]                                                 \n",
+      "Extracting data/raw/raw/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/raw/raw/MNIST/raw\n",
+      "\n",
+      "Processing...\n",
+      "/Users/densechen/miniconda3/envs/openfed/lib/python3.7/site-packages/torchvision/datasets/mnist.py:502: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/distiller/project/conda/conda-bld/pytorch_1616554799287/work/torch/csrc/utils/tensor_numpy.cpp:143.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n",
+      "Done!\n",
+      "+-------+---------+--------+------+\n",
+      "| Parts | Samples |  Mean  | Var  |\n",
+      "+-------+---------+--------+------+\n",
+      "|  100  |  59600  | 596.00 | 0.00 |\n",
+      "+-------+---------+--------+------+\n"
+     ]
+    }
+   ],
    "source": [
-    "!mkdir -pv ../benchmakr/datasets/mnist/data/raw"
+    "!cd ../benchmark/datasets/mnist && mkdir -pv data/raw && python mnist.py"
    ]
   },
   {
